fix(hide_tab_bar_linux): disable useless spacing and add docs

--- a/drew/hide_tab_bar_linux.css
+++ b/drew/hide_tab_bar_linux.css
@@ -1,14 +1,23 @@
 @import url(hide_tab_bar.css);
 
 /* Makes room on the right of the menu button for the window buttons */
-#nav-bar {
+/* the window buttons no longer appear, so i commented this out, since it's pointless */
+/* #nav-bar {
     border-inline: var(--uc-window-drag-space-width, 80px) solid var(--toolbar-bgcolor);
     border-inline-style: solid !important;
     border-right-width: calc(var(--uc-window-control-width, 0px) + var(--uc-window-drag-space-width, 0px));
     margin-left: -80px;
-}
+} */
 
-/* TODO: what purpose does this have? it fully removes the toolbar in macos which is a problem */
+/* 
+With hide_tab_bar.css active in gnome, there is a lingering menu bar
+with File, Edit, View, ... and the _ [] X buttons.
+This removes that bar, which is basically what we want.
+Unfortunately it also means there are no _ [] X buttons any more, but
+we just live with it (extensions can add those back).
+In macos, this fully removes the entire toolbar, which is unacceptable,
+so this is only a linux-specific tweak.
+*/
 :root:not([inFullscreen]) #nav-bar {
     margin-top: calc(0px - var(--uc-toolbar-height));
     z-index: 2;
